# GOALdetection

./: CMakeLists.txt  README.md  package.xml
src/: goal.cpp
